@@ -7,6 +7,7 @@
     * Faster checking and processing when uploading gcode
     * Static web update
     * React to thermal runaway by going into the error state
+    * Use daemon type WSGI threads
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
